--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 python: "2.7"
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl
+ - sudo apt-get install -qq python-apt python-pycurl grep
 install:
   - pip install ansible
   - ansible-galaxy install franklinkim.apt
@@ -14,4 +14,4 @@ script:
   - echo localhost > inventory
   - ln -s ansible-php5-newrelic ../franklinkim.php5-newrelic
   - ansible-playbook --syntax-check -i inventory test.yml
-  - ansible-playbook -i inventory test.yml --connection=local --sudo -vvvv
+  - ansible-playbook -i inventory test.yml --connection=local --sudo -vvvv 2> /dev/null | tee
