--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,13 +2,17 @@
 # For more information about default variables see:
 # http://www.ansibleworks.com/docs/playbooks_variables.html#id26
 #
-# php5_newrelic:
-#   - { section: newrelic, option: appname, value: "My App" }
-#   - { section: newrelic, option: logfile, value: "/var/log/newrelic/php_agent.log" }
-#   - { section: newrelic, option: daemon.logfile, value: "/var/log/newrelic/newrelic-daemon.log" }
-#
+# newrelic_license_key: yourkey
 
-# ini config settings
-php5_newrelic:
-  - { section: newrelic, option: logfile, value: "/var/log/newrelic/php_agent.log" }
-  - { section: newrelic, option: daemon.logfile, value: "/var/log/newrelic/newrelic-daemon.log" }
+# Sets the name of the file to send log messages to.
+php5_newrelic_logfile: /var/log/newrelic/php_agent.log
+# Sets the level of detail to include in the log file.
+php5_newrelic_loglevel: info
+# Sets the name of the file to send daemon log messages to.
+php5_newrelic_daemon_logfile: /var/log/newrelic/newrelic-daemon.log
+# Sets the level of detail to include in the daemon log.
+php5_newrelic_daemon_loglevel: info
+# Enables high security for all applications.
+php5_newrelic_high_security: no
+# Sets the name of the application that metrics will be reported into.
+php5_newrelic_appname: myapp
