chor: fix role name in test

--- a/tests/main.yml
+++ b/tests/main.yml
@@ -3,7 +3,7 @@
 - hosts: all
   sudo: yes
   roles:
-    - franklinkim.apt
+    - weareinteractive.apt
     - franklinkim.newrelic
     - franklinkim.php5-newrelic
   vars:
