Adds new task and variable to tasks/config.yml
- Adds new array variable, `php5_newrelic_extra_config`.
- Adds new task to `lineinfile` any items contained in the new var.
- gh-6

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -7,3 +7,9 @@
     owner: "root"
     group: "root"
     mode: "0644"
+
+- name: Add additional config options to `newrelic.ini`.
+  lineinfile:
+    path: "{{ php5_newrelic_config_dest }}/newrelic.ini"
+    line: "{{ item }}"
+  with: "{{ php5_newrelic_extra_config }}"
