Changes nonexistent 'with' attribute to 'with_items`
- gh-6

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -12,4 +12,4 @@
   lineinfile:
     path: "{{ php5_newrelic_config_dest }}/newrelic.ini"
     line: "{{ item }}"
-  with: "{{ php5_newrelic_extra_config }}"
+  with_items: "{{ php5_newrelic_extra_config }}"
