refactor: move extra config into template

--- a/tests/main.yml
+++ b/tests/main.yml
@@ -1,6 +1,7 @@
 ---
 
 - hosts: all
+  become: yes
   roles:
     - weareinteractive.apt
     - franklinkim.newrelic
@@ -11,3 +12,5 @@
       - 'ppa:ondrej/php5-oldstable'
     newrelic_license_key: ab2fa361cd4d0d373833cad619d7bcc424d27c16
     php5_newrelic_appname: "My App"
+    php5_newrelic_extra_config:
+      newrelic.enabled: true
