--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 # newrelic_license_key: yourkey
+# php5_newrelic_extra_config:
+#   newrelic.enabled: true
 
 # Sets the name of the file to send log messages to.
 php5_newrelic_logfile: /var/log/newrelic/php_agent.log
@@ -17,4 +19,4 @@ php5_newrelic_appname: myapp
 # Note: for php7 it's /etc/php/7.0/mods-available
 php5_newrelic_config_dest: /etc/php5/mods-available
 # Writes other config options to newrelic.ini.
-php5_newrelic_extra_config: []
+php5_newrelic_extra_config: {}
