--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 ---
-language: phyton
+language: python
 python: "2.7"
 
 sudo: required
@@ -14,4 +14,4 @@ script:
   - make test
 
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/?branch=master
