--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
   - make test
 
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/?branch=master
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
