--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,22 +1,4 @@
 ---
 
-- name: Installing dependencies
-  apt:
-    pkg: apt-transport-https
-    state: present
-
-- name: Adding APT key
-  apt_key:
-    url: https://download.newrelic.com/548C16BF.gpg
-
-- name: Add APT repository
-  apt_repository:
-    repo: "deb http://apt.newrelic.com/debian/ newrelic non-free"
-    update_cache: yes
-
-- name: Installing packages
-  apt:
-    pkg: "{{ item }}"
-    state: present
-  with_items:
-    - newrelic-php5
+- name: check for OS Family
+  include_task: '{{ playbook_dir }}/tasks/{{ ansible_os_family }}_install.yml'
