chore: fix php repo

--- a/tests/main.yml
+++ b/tests/main.yml
@@ -8,7 +8,7 @@
     - weareinteractive.php5-newrelic
   vars:
     apt_repositories:
-      - repo: "ppa:ondrej/php5-oldstable"
+      - repo: "ppa:ondrej/php"
     newrelic_license_key: ab2fa361cd4d0d373833cad619d7bcc424d27c16
     php5_newrelic_appname: "My App"
     php5_newrelic_extra_config:
