--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - docker exec -t "$(cat ${container_id})" env TERM=xterm ansible --version
 
   # Install dependencies
-  - docker exec -t "$(cat ${container_id})" env TERM=xterm bash -c 'apt-get update && apt-get install -y build-essential'
+  - docker exec -t "$(cat ${container_id})" env TERM=xterm bash -c 'apt-get update && apt-get install -y build-essential ca-certificates'
   - docker exec -t "$(cat ${container_id})" env TERM=xterm bash -c 'ansible-galaxy install weareinteractive.apt weareinteractive.php5 franklinkim.newrelic'
 
   # Ansible syntax check.
