--- a/tests/main.yml
+++ b/tests/main.yml
@@ -11,3 +11,4 @@
     php5_newrelic_appname: "My App"
     php5_newrelic_extra_config:
       newrelic.enabled: true
+    php5_newrelic_config_dest: "{{ php5_module_path }}"
