--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: franklin
   company: We Are Interactive
   description: Installs New Relic PHP agent
-  min_ansible_version: 2.0
+  min_ansible_version: 2.4
   license: MIT
   # Optionally specify the branch Galaxy will use when accessing the GitHub
   # repo for this role. During role install, if no tags are available,
@@ -19,112 +19,79 @@ galaxy_info:
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
-  # - name: EL
-  #  versions:
-  #  - all
-  #  - 5
-  #  - 6
-  #  - 7
-  #- name: GenericUNIX
-  #  versions:
-  #  - all
-  #  - any
-  #- name: Solaris
-  #  versions:
-  #  - all
-  #  - 10
-  #  - 11.0
-  #  - 11.1
-  #  - 11.2
-  #  - 11.3
-  #- name: Fedora
-  #  versions:
-  #  - all
-  #  - 16
-  #  - 17
-  #  - 18
-  #  - 19
-  #  - 20
-  #  - 21
-  #  - 22
-  #  - 23
-  #- name: Windows
-  #  versions:
-  #  - all
-  #  - 2012R2
-  #- name: SmartOS
-  #  versions:
-  #  - all
-  #  - any
-  #- name: opensuse
-  #  versions:
-  #  - all
-  #  - 12.1
-  #  - 12.2
-  #  - 12.3
-  #  - 13.1
-  #  - 13.2
-  #- name: Amazon
-  #  versions:
-  #  - all
-  #  - 2013.03
-  #  - 2013.09
-  #- name: GenericBSD
-  #  versions:
-  #  - all
-  #  - any
-  #- name: FreeBSD
-  #  versions:
-  #  - all
-  #  - 10.0
-  #  - 10.1
-  #  - 10.2
-  #  - 8.0
-  #  - 8.1
-  #  - 8.2
-  #  - 8.3
-  #  - 8.4
-  #  - 9.0
-  #  - 9.1
-  #  - 9.1
-  #  - 9.2
-  #  - 9.3
-  - name: Ubuntu
-    versions:
-    - all
-  #  - lucid
-  #  - maverick
-  #  - natty
-  #  - oneiric
-  #  - precise
-  #  - quantal
-  #  - raring
-  #  - saucy
-  #  - trusty
-  #  - utopic
-  #  - vivid
-  #  - wily
-  #- name: SLES
-  #  versions:
-  #  - all
-  #  - 10SP3
-  #  - 10SP4
-  #  - 11
-  #  - 11SP1
-  #  - 11SP2
-  #  - 11SP3
-  #- name: GenericLinux
-  #  versions:
-  #  - all
-  #  - any
-  - name: Debian
-    versions:
-    - all
-  #  - etch
-  #  - jessie
-  #  - lenny
-  #  - squeeze
-  #  - wheezy  categories:
+  #  - name: EL
+  #    versions:
+  #      - all
+  #      - 5
+  #      - 6
+  #  - name: GenericUNIX
+  #    versions:
+  #      - all
+  #      - any
+  #  - name: Fedora
+  #    versions:
+  #      - all
+  #      - 16
+  #      - 17
+  #      - 18
+  #      - 19
+  #      - 20
+  #  - name: opensuse
+  #    versions:
+  #      - all
+  #      - 12.1
+  #      - 12.2
+  #      - 12.3
+  #      - 13.1
+  #      - 13.2
+  #  - name: GenericBSD
+  #    versions:
+  #      - all
+  #      - any
+  #  - name: FreeBSD
+  #    versions:
+  #      - all
+  #      - 8.0
+  #      - 8.1
+  #      - 8.2
+  #      - 8.3
+  #      - 8.4
+  #      - 9.0
+  #      - 9.1
+  #      - 9.1
+  #      - 9.2
+    - name: Ubuntu
+      versions:
+  #      - all
+  #      - lucid
+  #      - maverick
+  #      - natty
+  #      - oneiric
+        - precise
+  #      - quantal
+  #      - raring
+  #      - saucy
+        - trusty
+  #  - name: SLES
+  #    versions:
+  #      - all
+  #      - 10SP3
+  #      - 10SP4
+  #      - 11
+  #      - 11SP1
+  #      - 11SP2
+  #      - 11SP3
+  #  - name: GenericLinux
+  #    versions:
+  #      - all
+  #      - any
+  #  - name: Debian
+  #    versions:
+  #      - all
+  #      - etch
+  #      - lenny
+  #      - squeeze
+  #      - wheezy
   #
   # List tags for your role here, one per line. A tag is
   # a keyword that describes and categorizes the role.
