--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,5 +6,15 @@
   when: not newrelic_license_key|default(False)
 
 - include: install.yml
+  tags:
+    - monitoring
+    - php5-newrelic
+    - install
+    - php5-newrelic-install
 
 - include: config.yml
+  tags:
+    - monitoring
+    - php5-newrelic
+    - install
+    - php5-newrelic-install
